<resources>
    <string name="app_name">Clothing shop</string>
    <string name="home">HOME</string>
    <string name="products">PRODUCTS</string>
    <string name="productAdded">Product added</string>
    <string name="item">ITEM</string>
    <string name="product">PRODUCT</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="productType">Product type</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="material">Material</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="product_image">Product image url</string>
    <string name="submit">Submit</string>
    <string name="cotton">Cotton</string>
    <string name="leather">Leather</string>
    <string name="jeans">Jeans</string>
    <string name="name_error">Name field is required</string>
    <string name="description_error">Description field is required</string>
    <string name="brand_error">Brand field is required</string>
    <string name="category_error">Category field is required</string>
    <string name="product_type_error">Product type field is required</string>
    <string name="style_error">Style field is required</string>
    <string name="color_error">Color field is required</string>
    <string name="material_error">Material field is required</string>
    <string name="size_error">Size field is required</string>
    <string name="price_error">Price field is required</string>
    <string name="product_image_error">Product image field is required</string>

    <string name="settings">Settings</string>

    <!-- Theme Titles -->
    <string name="choose_theme">Choose a theme</string>

    <!-- Language Titles -->
    <string name="choose_language">Choose a language</string>

</resources>