<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.AddProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            android:padding="16dp">

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/name"
                app:errorMsg="@string/name_error"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/description"
                app:errorMsg="@string/description_error"
                app:layout_constraintTop_toBottomOf="@+id/name_input"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/brand_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/brand"
                app:errorMsg="@string/brand_error"
                app:layout_constraintTop_toBottomOf="@+id/description_input"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/category"
                app:errorMsg="@string/category_error"
                app:layout_constraintTop_toBottomOf="@+id/brand_input"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/product_type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/productType"
                app:errorMsg="@string/product_type_error"
                app:layout_constraintTop_toBottomOf="@+id/category_input"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/style_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/style"
                app:errorMsg="@string/style_error"
                app:layout_constraintTop_toBottomOf="@+id/product_type_input"
                tools:ignore="MissingConstraints" />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/color_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/color"
                app:errorMsg="@string/color_error"
                app:layout_constraintTop_toBottomOf="@+id/style_input"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/material_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:paddingTop="16dp"
                android:text="@string/material"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/color_input" />

            <RadioGroup
                android:id="@+id/material_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/material_text_view"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_semi_bold"
                    android:text="@string/cotton" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_semi_bold"
                    android:text="@string/leather" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_semi_bold"
                    android:text="@string/jeans" />

            </RadioGroup>

            <TextView
                android:id="@+id/size_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:paddingTop="16dp"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/material_radio_group" />

            <Spinner
                android:id="@+id/size_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/size_text_view"
                />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorMsg="@string/price_error"
                app:label="@string/price"
                app:layout_constraintTop_toBottomOf="@+id/size_spinner"
                tools:ignore="MissingConstraints"
            />

            <com.example.homework_3.views.EditTextWithLabelView
                android:id="@+id/product_image_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorMsg="@string/product_image_error"
                app:label="@string/product_image"
                app:layout_constraintTop_toBottomOf="@+id/price_input"
                tools:ignore="MissingConstraints"
            />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/submit_button_bg"
                android:fontFamily="@font/comfortaa_semi_bold"
                android:text="@string/submit"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_image_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>